--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6785,9 +6785,9 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous fixes
 
--Refactoring / optimization of ENTIRE markets API data parsing logic (for 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)
+-Upgraded Jupiter Aggregator exchange API, including case-sensitive support for asset IDs, addition of market trade volume data, and asset search
 
--Upgraded Jupiter Aggregator exchange API, including case-sensitive support for asset IDs, and the addition of market trade volume data
+-Refactoring / optimization of ENTIRE markets API data parsing logic (for 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)
 
 -Added Admin Config settings for: Portfolio Assets (adding / removing assets and markets is FINALLY available in the interface now)
 
@@ -6800,6 +6800,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -Optimized / cleaned up page loading logic
 
 -Upgraded Idex exchange API to v4
+
+-Upgraded ZingChart to v2.9.15
 
 -Upgraded Kraken exchange API
 
