--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6799,9 +6799,11 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Optimized / cleaned up page loading logic
 
+-Increased reliability of app runtime 
+
 -Upgraded Idex exchange API to v4
 
--Upgraded ZingChart to v2.9.15
+-Upgraded ZingChart to v2.9.14
 
 -Upgraded Kraken exchange API
 
