--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -195,6 +195,21 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+Crypto tracker app hangs BADLY / SILENTLY if configured SENDING email
+server is offline (and their are messages queued to send). Build in
+detection, so it gracefully fails / logs issue to error logging.
+
+
+Fedora's news feed:
+https://fedoramagazine.org/feed/
+
+
+"private contact" link on project page (and maybe docs?) points to the ".com" site. Change it to the ".org" site.
+
+
+Update MKR and DAI to the new rebranded tokens: SKY and USDS
+
+
 Add any other 'required api key' notices, near the top of the external data function. This is a VERY RELIABLE PLACE to have ALL of the checks, as we ALWAYS use the external data function to get API data.
 
 
