housekeeping, SMTP email alerts bug fix
housekeeping, SMTP email alerts bug fix

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6816,6 +6816,17 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.00.40
+
+-BUG FIX: Fixed app hanging / freezing, when SMTP server user settings are added (for sending email-based alerts / etc), BUT THE SMTP SERVER IS OFFLINE / MISCONFIGURED
+
+-Housekeeping on the code base
+
+-------------------------------------------------------------------
+
+
+
 
 
 
