--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -195,6 +195,9 @@ P̵̫̊h̴̪̑ì̶̯s̵̫̀h̸̠̆i̶̔͜n̸̞͒g̶̳̏ ̸̺͐a̴͎̓n̷̜̕d̴
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 
+BUG: adding "grass||jupiter_ag||sol||both" AFTER ADDING THE MARKETS threw a error "market does not exist" (even though it DID EXIST), but after adding "grass||coingecko_usd||usd||both" INSTEAD, IT WORKED FINE. Then adding "grass-2||jupiter_ag||sol||both" ALSO WORKED FINE. Try to replicate, and find the issue.
+
+
 Name / mcap slug should be EDITABLE on the portfolio assets admin page. Make sure to sanitize the user-inputted name (like we do when adding markets via interface).
 
 
@@ -215,6 +218,10 @@ Add bitcoin as a 'primary currency' option (like we can do for eth / sol).
 
 Fedora's news feed:
 https://fedoramagazine.org/feed/
+
+
+Update bankless feed:
+https://feeds.libsyn.com/247424/rss
 
 
 "private contact" link on project page (and maybe docs?) points to the ".com" site. Change it to the ".org" site.
