--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6821,7 +6821,13 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed app hanging / freezing, when SMTP server user settings are added (for sending email-based alerts / etc), BUT THE SMTP SERVER IS OFFLINE / MISCONFIGURED
 
+-Backup routine for user configuration data
+
+-Backup files listed in "Reset / Backup & Restore" admin section (with download links)
+
 -Housekeeping / refactoring / optimization on the codebase
+
+-Cleaned up DEMO config
 
 -------------------------------------------------------------------
 
