refactoring, sanity scan function, CSS styling improvements, misc UX
refactoring, sanity scan function, CSS styling improvements, misc UX

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6841,6 +6841,15 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.0
+
+-Polished interface styling
+
+-------------------------------------------------------------------
+
+
+
 
 
 
